# aoc2025

./: .gitignore  dune-project
lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  io.ml
test/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  dune  test.ml
test/inputs/day02/: test
