(data_only_dirs inputs)

(library
 (modules test)
 (name test))
 
(test
 (name day01)
 (modules day01)
 (libraries aoc test)
 (deps (source_tree inputs)))
 
(test
 (name day02)
 (modules day02)
 (libraries aoc test)
 (deps (source_tree inputs)))

(test
 (name day03)
 (modules day03)
 (libraries aoc test)
 (deps (source_tree inputs)))

(test
 (name day04)
 (modules day04)
 (libraries aoc test)
 (deps (source_tree inputs)))
